db, helper, app major refactor
- clean up mongo db module
- separate helper functions into CLI tool
- add a couple test pages
- add a couple api endpoints

--- a/templates/products.html
+++ b/templates/products.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>myRetail</title>
-</head>
-<body>
+{% extends 'layout.html' %}
 
-</body>
-</html>
+
+{% block body %}
+	{% if products %}
+		<h2>Products</h2>
+
+		<ul>
+		{% for product in products %}
+			<li>{{ product.product.available_to_promise_network.product_id }}</li>
+		{% endfor %}
+		</ul>
+	{% else %}
+		<h2>No Products!</h2>
+	{% endif %}
+{% endblock body %}
