--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>myRetail</title>
-</head>
-<body>
-<h1>myRetail</h1>
+{% extends 'layout.html' %}
 
-</body>
-</html>
+
+{% block body %}
+<h2>Hello, world!</h2>
+{% endblock body %}
